# rust-openapi-cicd

./: .gitlab-ci.yml  Cargo.toml  readme.md  run_dev.sh
src/app/: app_config.rs  app_state.rs
src/domain/model/: thought.rs
src/repos/: mod.rs  thoughts_repo.rs
src/web_api/: api_error.rs  handlers.rs  mod.rs
