[package]
name = "rust-openapi-cicd"
version = "0.1.0"
edition = "2021"
authors = [
    "Marius Ileana <marile@signicat.com>"
]

[dependencies]
axum = { version = "0.6.1", features = [ "headers", "macros", "json" ] }
clap = { version="4.1.3", features = [ "derive" ] }
config = "0.13.3"
nanoid = "0.4.0"
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
